--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,9 +5,7 @@
 	"tasks": [
 		{
 			"type": "npm",
-			"script": "watch",
-			"problemMatcher": "$tsc-watch",
-			"isBackground": true,
+			"script": "esbuild",
 			"presentation": {
 				"reveal": "never"
 			},
