--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ado-auth-code",
-  "displayName": "ado-auth-code",
+  "name": "ado-codespaces-auth",
+  "displayName": "ado-codespaces-auth",
   "description": "",
   "version": "0.0.1",
   "engines": {
@@ -10,14 +10,14 @@
     "Other"
   ],
   "activationEvents": [
-    "onStartupFinished"
+    "*"
   ],
-  "main": "./out/extension.js",
+  "main": "./out/main.js",
   "contributes": {
     "commands": [
       {
-        "command": "ado-auth-code.helloWorld",
-        "title": "Hello World"
+        "command": "ado-codespaces-auth.authenticate",
+        "title": "Authenticate ADO to Codespace"
       }
     ]
   },
@@ -25,27 +25,24 @@
     "workspace"
   ],
   "scripts": {
-    "vscode:prepublish": "yarn run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "pretest": "yarn run compile && yarn run lint",
-    "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js"
+    "vscode:prepublish": "yarn run esbuild-base -- --minify",
+    "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
+    "esbuild": "npm run esbuild-base -- --sourcemap",
+    "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
+    "lint": "eslint src --ext ts"
   },
   "dependencies": {
-    "axios": "^1.3.1"
+    "axios": "^1.3.1",
+    "libsodium-wrappers": "^0.7.10"
   },
   "devDependencies": {
-    "@types/vscode": "^1.74.0",
-    "@types/glob": "^8.0.1",
-    "@types/mocha": "^10.0.1",
+    "@types/libsodium-wrappers": "^0.7.10",
     "@types/node": "16.x",
+    "@types/vscode": "^1.74.0",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
+    "esbuild": "^0.17.5",
     "eslint": "^8.33.0",
-    "glob": "^8.1.0",
-    "mocha": "^10.1.0",
-    "typescript": "^4.9.4",
-    "@vscode/test-electron": "^2.2.2"
+    "typescript": "^4.9.4"
   }
 }
