--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ado-codespaces-auth-test",
-  "displayName": "ado-codespaces-auth-test",
+  "name": "ado-codespaces-auth",
+  "displayName": "Azure Devops Codespaces Authentication",
   "description": "",
   "publisher": "RJEx",
   "version": "0.0.18",
@@ -18,7 +18,7 @@
     "commands": [
       {
         "command": "ado-codespaces-auth.authenticate",
-        "title": "Authenticate ADO to Codespace"
+        "title": "Authenticate Azure DevOps"
       }
     ],
     "configuration": {
