--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "ado-codespaces-auth-test",
   "description": "",
   "publisher": "RJEx",
-  "version": "0.0.18",
+  "version": "0.0.21",
   "engines": {
     "vscode": "^1.74.0"
   },
@@ -47,12 +47,13 @@
     "lint": "eslint src --ext ts"
   },
   "dependencies": {
-    "axios": "^1.3.1",
-    "libsodium-wrappers": "^0.7.10"
+    "node-ipc": "^9.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/libsodium-wrappers": "^0.7.10",
     "@types/node": "16.x",
+    "@types/node-ipc": "^9.2.0",
+    "@types/uuid": "^9.0.0",
     "@types/vscode": "^1.74.0",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
