--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Azure Devops Codespaces Authentication",
   "description": "",
   "publisher": "RJEx",
-  "version": "0.0.18",
+  "version": "0.0.21",
   "engines": {
     "vscode": "^1.74.0"
   },
@@ -20,21 +20,7 @@
         "command": "ado-codespaces-auth.authenticate",
         "title": "Authenticate Azure DevOps"
       }
-    ],
-    "configuration": {
-      "type": "object",
-      "title": "ADO Codespaces Auth",
-      "properties": {
-        "ado-auth-helper.postAuthScript": {
-          "type": [
-            "string",
-            "null"
-          ],
-          "default": null,
-          "description": "Script to Execute when auth token is fetched and/or updated"
-        }
-      }
-    }
+    ]
   },
   "extensionKind": [
     "workspace"
@@ -47,12 +33,13 @@
     "lint": "eslint src --ext ts"
   },
   "dependencies": {
-    "axios": "^1.3.1",
-    "libsodium-wrappers": "^0.7.10"
+    "node-ipc": "^9.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/libsodium-wrappers": "^0.7.10",
     "@types/node": "16.x",
+    "@types/node-ipc": "^9.2.0",
+    "@types/uuid": "^9.0.0",
     "@types/vscode": "^1.74.0",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
