--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ado-codespaces-auth",
   "displayName": "Azure Devops Codespaces Authentication",
-  "description": "",
-  "publisher": "RJEx",
-  "version": "0.0.21",
+  "description": "This extension is used for authenticating to Azure Devops in GitHub Codespaces",
+  "publisher": "ms-codespaces-tools",
+  "version": "1.0.0",
   "engines": {
     "vscode": "^1.74.0"
   },
