--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ado-codespaces-auth",
   "displayName": "Azure Devops Codespaces Authentication",
-  "description": "This extension is used for authenticating to Azure Devops in GitHub Codespaces",
+  "description": "Seamless authentication to Azure Devops in GitHub Codespaces",
   "publisher": "ms-codespaces-tools",
   "repository": "https://github.com/microsoft/ado-codespaces-auth",
   "version": "1.0.0",
