Split up ado-auth-helper and azure-auth-helper

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   ],
   "scripts": {
     "vscode:prepublish": "yarn run esbuild-base",
-    "esbuild-base": "esbuild ./src/extension.ts ./src/ado-auth-helper.ts --bundle --outdir=out --external:vscode --format=cjs --platform=node",
+    "esbuild-base": "esbuild ./src/extension.ts ./src/auth-helper.ts --bundle --outdir=out --external:vscode --format=cjs --platform=node",
     "esbuild": "npm run esbuild-base -- --sourcemap",
     "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
     "lint": "eslint src --ext ts"
