--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "esbuild-base": "esbuild ./src/extension.ts ./src/auth-helper.ts --bundle --outdir=out --external:vscode --format=cjs --platform=node",
     "esbuild": "npm run esbuild-base -- --sourcemap",
     "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
-    "lint": "eslint src --ext ts"
+    "lint": "eslint src --ext ts",
+    "vsce:package": "vsce package --allow-star-activation",
+    "vsce:publish": "vsce publish"
   },
   "dependencies": {
     "node-ipc": "^9.0.0",
@@ -48,6 +50,7 @@
     "@types/vscode": "^1.74.0",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
+    "@vscode/vsce": "^2.18.0",
     "esbuild": "^0.17.5",
     "eslint": "^8.33.0",
     "typescript": "^4.9.4"
